Updated verify to accept CA file and fixed tests.
Verify now requires a CA file to validate certificates. This feature
broke the existing verify test so the tests were rewritten. The
tests have been rewritten to only exercise the functionality of the
library rather than using a bunch of fixtures to exercise the
integration of the SSL module and the OpenSSL command line utility.
The test framework has been changed to use Jasmine rather than
Mocha to take advantage of the spy feature; the make file has been
updated accordingly. This upgrades the version to 1.0.0. The README
has been updated to remove some errors and reflect the changes in
this version.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ssl",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Verification of SSL certificates",
   "main": "ssl.js",
   "scripts": {
-    "test": "make build"
+    "test": "make test"
   },
   "homepage": "https://github.com/onmodulus/ssl.git",
   "bugs": "https://github.com/onmodulus/ssl/issues",
@@ -29,7 +29,6 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "mocha": "~1.11.0",
     "jshint": "~2.1.4"
   }
 }
